portfolio posts, images and mobile menu
- added portfolio posts
- added images for portfolio
- mobile menu hide show and styling

--- a/_posts/2017-02-19-Savioke.md
+++ b/_posts/2017-02-19-Savioke.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Savioke"
 date:   2017-02-19 17:15:59 -0500
 categories: portfolio
+image: ../assets/images/savioke.jpg
 ---
 
 Mechanical engineer on indoor autonomous delivery robot
